# stm32f30x-hal

./: Cargo.toml
examples/: adc_dma.rs  dma.rs
src/: adc.rs  dac.rs  dma.rs  gpio.rs  lib.rs  prelude.rs  syscfg.rs  time.rs  timer.rs
src/adc/: adc12.rs  adc34.rs  mod.rs
